--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,10 @@
 {
 	"dependencies": {
+		"@stripe/stripe-js": "^4.8.0",
 		"body-parser": "^1.20.3",
+		"dotenv": "^16.4.5",
 		"express": "^4.21.1",
+		"stripe": "^17.2.0",
 		"typescript": "^5.6.3"
 	},
 	"scripts": {
