--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
 		"body-parser": "^1.20.3",
 		"dotenv": "^16.4.5",
 		"express": "^4.21.1",
+		"express-ws": "^5.0.2",
 		"stripe": "^17.2.0",
 		"typescript": "^5.6.3"
 	},
@@ -14,6 +15,7 @@
 	"devDependencies": {
 		"@types/body-parser": "^1.19.5",
 		"@types/express": "^5.0.0",
+		"@types/express-ws": "^3.0.5",
 		"@types/node": "^22.7.6"
 	}
 }
