--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,7 @@
 	"dependencies": {
 		"@stripe/stripe-js": "^4.8.0",
 		"body-parser": "^1.20.3",
+		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
 		"express": "^4.21.1",
 		"stripe": "^17.2.0",
@@ -13,6 +14,7 @@
 	"packageManager": "pnpm@9.9.0+sha512.60c18acd138bff695d339be6ad13f7e936eea6745660d4cc4a776d5247c540d0edee1a563695c183a66eb917ef88f2b4feb1fc25f32a7adcadc7aaf3438e99c1",
 	"devDependencies": {
 		"@types/body-parser": "^1.19.5",
+		"@types/cors": "^2.8.17",
 		"@types/express": "^5.0.0",
 		"@types/node": "^22.7.6"
 	}
